--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -19,10 +19,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7172, 785)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test = pd.read_csv(\"..\\data\\sign_mnist_test.csv\")\n",
+    "df_train = pd.read_csv(\"..\\data\\sign_mnist_train.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Reducción de dimensionalidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27455, 785)\n",
+      "(7172, 785)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_train.shape)\n",
+    "print(df_test.shape)\n",
+    "random_state = 0\n",
+    "pca = make_pipeline(StandardScaler(), PCA(n_components=2, random_state=random_state))"
    ]
   },
   {
@@ -51,6 +110,28 @@
    "metadata": {},
    "source": [
     "### KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n_neighbors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lucho\\repos\\ai_proyecto_2\\notebook\\main.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lucho/repos/ai_proyecto_2/notebook/main.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m knn \u001b[39m=\u001b[39m KNeighborsClassifier(n_neighbors\u001b[39m=\u001b[39mn_neighbors)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lucho/repos/ai_proyecto_2/notebook/main.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m pca\u001b[39m.\u001b[39mfit(df_train[\u001b[39mnot\u001b[39;00m df_train\u001b[39m.\u001b[39mlabel], df_train[df_train\u001b[39m.\u001b[39mlabel])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'n_neighbors' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=24)\n",
+    "pca.fit(df_train[not df_train.label], df_train[df_train.label])"
    ]
   },
   {
@@ -90,10 +171,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b1fc82697690d5394813d7b32ae5c877233d2ec6558daccf0379c2991af558ac"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
