--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -8,7 +8,7 @@
     "## Inegrantes\n",
     "    - Luis Berrospi\n",
     "    - Pedro Dominguez\n",
-    "    - Carlos Guerrero"
+    "    - Carlos Esteban Guerrero Robles"
    ]
   },
   {
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit (microsoft store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -186,9 +186,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b1fc82697690d5394813d7b32ae5c877233d2ec6558daccf0379c2991af558ac"
@@ -196,5 +195,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
