--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -27,12 +27,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import cross_val_score # k fold cross validation\n",
+    "from sklearn import metrics # k fold cross validation"
    ]
   },
   {
@@ -164,9 +166,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Tabla de resumen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### K Fold Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sklearn_k_fold_cross_validation (model, x_train, y_train, k)\n",
+    "    scores = cross_val_score(model, x_train, y_, cv = k, scoring = ‘accuracy’)\n",
+    "    errors = 1 - scores\n",
+    "    return scores, errors"
    ]
   }
  ],
