--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inteligencia ArtificialProyecto #2: Clasificación\n",
-    "## Inegrantes\n",
+    "# Inteligencia Artificial Proyecto #2: Clasificación\n",
+    "## Integrantes\n",
     "    - Luis Berrospi\n",
     "    - Pedro Dominguez\n",
     "    - Carlos Guerrero"
@@ -20,14 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "#Librerías de reducción de dimensiones\n",
+    "import pywt\n",
+    "import pywt.data\n",
+    "\n",
+    "#Librerías para lectura/edición de imágenes\n",
+    "from skimage.io import imread, imshow\n",
+    "from skimage.transform import resize\n",
+    "from skimage.color import rgb2gray\n",
+    "\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import svm\n",
+    "from sklearn import tree\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
@@ -37,23 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7172, 785)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_test = pd.read_csv(\"..\\data\\sign_mnist_test.csv\")\n",
-    "df_train = pd.read_csv(\"..\\data\\sign_mnist_train.csv\")"
+    "df_test_x = df_test.loc[:, \"pixel1\":\"pixel784\"]\n",
+    "df_test_y = df_test.label\n",
+    "\n",
+    "df_train = pd.read_csv(\"..\\data\\sign_mnist_train.csv\")\n",
+    "df_train_x = df_train.loc[:, \"pixel1\":\"pixel784\"]\n",
+    "df_train_y = df_train.label"
    ]
   },
   {
@@ -65,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +92,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Haar(imagen, cortes):\n",
+    "  for i in range(cortes):\n",
+    "    imagen, (LH, HL, HH) = pywt.dwt2(imagen, 'haar')\n",
+    "  return imagen\n",
+    "\n",
+    "def vectorizar(matrix):\n",
+    "  return matrix.flatten()\n",
+    "\n",
+    "def proccess_images(route):\n",
+    "  dataset = []\n",
+    "  data_X = []\n",
+    "  data_Y = []\n",
+    "  for i, folder_name in enumerate(os.listdir(route)):\n",
+    "\n",
+    "      for photo_name in os.listdir(route + folder_name):\n",
+    "        photo = imread(os.path.join(route + folder_name, photo_name))\n",
+    "        imagen = Haar(photo,2)\n",
+    "        features = vectorizar(imagen)\n",
+    "          \n",
+    "        data_X.append(features)\n",
+    "        data_Y.append((i, folder_name))\n",
+    "          \n",
+    "        features = np.append(features, i)\n",
+    "        dataset.append(features)\n",
+    "  return dataset, data_X, data_Y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,10 +132,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm = svm.SVC(kernel='linear')\n",
+    "svm.fit(df_train_x,df_train_y)\n",
+    "svm_predicted = svm.predict(df_test_x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Estimación del error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.16508644729504\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_success = 0.0\n",
+    "for i, val in enumerate(svm_predicted):\n",
+    "    if val == df_test_y[i]:\n",
+    "        svm_success += 1\n",
+    "print(svm_success/len(svm_predicted)*100)"
    ]
   },
   {
@@ -114,24 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'n_neighbors' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\lucho\\repos\\ai_proyecto_2\\notebook\\main.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lucho/repos/ai_proyecto_2/notebook/main.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m knn \u001b[39m=\u001b[39m KNeighborsClassifier(n_neighbors\u001b[39m=\u001b[39mn_neighbors)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lucho/repos/ai_proyecto_2/notebook/main.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m pca\u001b[39m.\u001b[39mfit(df_train[\u001b[39mnot\u001b[39;00m df_train\u001b[39m.\u001b[39mlabel], df_train[df_train\u001b[39m.\u001b[39mlabel])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'n_neighbors' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=24)\n",
-    "pca.fit(df_train[not df_train.label], df_train[df_train.label])"
+    "knn.fit(df_train_x,df_train_y)\n",
+    "knn_predicted = knn.predict(df_test_x)"
    ]
   },
   {
@@ -139,6 +200,27 @@
    "metadata": {},
    "source": [
     "#### Estimación del error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.26882320133855\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_success = 0.0\n",
+    "for i, val in enumerate(knn_predicted):\n",
+    "    if val == df_test_y[i]:\n",
+    "        knn_success += 1\n",
+    "print(knn_success/len(knn_predicted)*100)"
    ]
   },
   {
@@ -156,10 +238,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = tree.DecisionTreeClassifier()\n",
+    "dt.fit(df_train_x,df_train_y)\n",
+    "dt_predicted = dt.predict(df_test_x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Estimación del error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.878973786949246\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_success = 0.0\n",
+    "for i, val in enumerate(dt_predicted):\n",
+    "    if val == df_test_y[i]:\n",
+    "        dt_success += 1\n",
+    "print(dt_success/len(dt_predicted)*100)"
    ]
   },
   {
