Add imports cell to notebook

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -15,12 +15,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lectura de datos"
+    "### Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lectura de datos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(\"..\\data\\sign_mnist_test.csv\")\n",
+    "df_test = pd.read_csv(\"../data/sign_mnist_test.csv\")\n",
     "df_test_x = df_test.loc[:, \"pixel1\":\"pixel784\"]\n",
     "df_test_y = df_test.label\n",
     "\n",
-    "df_train = pd.read_csv(\"..\\data\\sign_mnist_train.csv\")\n",
+    "df_train = pd.read_csv(\"../data/sign_mnist_train.csv\")\n",
     "df_train_x = df_train.loc[:, \"pixel1\":\"pixel784\"]\n",
     "df_train_y = df_train.label"
    ]
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
