- svm experiment made

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,11 @@
     "from skimage.transform import resize\n",
     "from skimage.color import rgb2gray\n",
     "\n",
+    "#Librerías para gráficas\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "#Librerías de modelos de clasificación\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import svm\n",
@@ -52,17 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(\"..\\data\\sign_mnist_test.csv\")\n",
+    "train_csv_path = \"../data/sign_mnist_train.csv\"\n",
+    "\n",
+    "df_train = pd.read_csv(train_csv_path)\n",
+    "df_train_x = df_train.loc[:, \"pixel1\":\"pixel784\"]\n",
+    "df_train_y = df_train.label\n",
+    "\n",
+    "df_train = df_train.to_numpy()\n",
+    "\n",
+    "test_csv_path = \"../data/sign_mnist_test.csv\"\n",
+    "\n",
+    "df_test = pd.read_csv(test_csv_path)\n",
     "df_test_x = df_test.loc[:, \"pixel1\":\"pixel784\"]\n",
     "df_test_y = df_test.label\n",
     "\n",
-    "df_train = pd.read_csv(\"..\\data\\sign_mnist_train.csv\")\n",
-    "df_train_x = df_train.loc[:, \"pixel1\":\"pixel784\"]\n",
-    "df_train_y = df_train.label"
+    "df_test = df_test.to_numpy()"
    ]
   },
   {
@@ -74,56 +87,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(27455, 785)\n",
-      "(7172, 785)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_train.shape)\n",
-    "print(df_test.shape)\n",
-    "random_state = 0\n",
-    "pca = make_pipeline(StandardScaler(), PCA(n_components=2, random_state=random_state))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Haar(imagen, cortes):\n",
-    "  for i in range(cortes):\n",
-    "    imagen, (LH, HL, HH) = pywt.dwt2(imagen, 'haar')\n",
-    "  return imagen\n",
+    "def reduce_dimension(letter, cuts, wavelet):\n",
+    "  for i in range(cuts):\n",
+    "    (letter, cD) = pywt.dwt(letter, wavelet)\n",
+    "  return letter\n",
     "\n",
     "def vectorizar(matrix):\n",
     "  return matrix.flatten()\n",
     "\n",
-    "def proccess_images(route):\n",
-    "  dataset = []\n",
+    "def proccess_letters(dataset, wavelet):\n",
+    "  \n",
     "  data_X = []\n",
     "  data_Y = []\n",
-    "  for i, folder_name in enumerate(os.listdir(route)):\n",
     "\n",
-    "      for photo_name in os.listdir(route + folder_name):\n",
-    "        photo = imread(os.path.join(route + folder_name, photo_name))\n",
-    "        imagen = Haar(photo,2)\n",
-    "        features = vectorizar(imagen)\n",
-    "          \n",
-    "        data_X.append(features)\n",
-    "        data_Y.append((i, folder_name))\n",
-    "          \n",
-    "        features = np.append(features, i)\n",
-    "        dataset.append(features)\n",
-    "  return dataset, data_X, data_Y"
+    "  for letter_features in dataset:\n",
+    "      \n",
+    "      letter = letter_features[0]\n",
+    "      data_Y.append(letter)\n",
+    "\n",
+    "      letter_features = reduce_dimension(letter_features[1:], 2, wavelet)\n",
+    "      letter_features = vectorizar(letter_features)\n",
+    "      data_X.append(letter_features)\n",
+    "\n",
+    "  return data_X, data_Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wavelet transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discrete_wavelets = ['haar', 'bior', 'coif', 'rbio', 'sym', 'db', 'dmey']\n",
+    "discrete_wavelets = [ wavelet for wavelet in pywt.wavelist(kind='discrete')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(df_train.shape)\n",
+    "#print(df_test.shape)\n",
+    "random_state = 0\n",
+    "pca = make_pipeline(StandardScaler(), PCA(n_components=2, random_state=random_state))"
    ]
   },
   {
@@ -135,13 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm = svm.SVC(kernel='linear')\n",
-    "svm.fit(df_train_x,df_train_y)\n",
-    "svm_predicted = svm.predict(df_test_x)"
+    "def SVM_classification(df_train_x, df_train_y, df_test_x):\n",
+    "    _svm = svm.SVC(kernel='linear')\n",
+    "    _svm.fit(df_train_x,df_train_y)\n",
+    "    svm_predicted = _svm.predict(df_test_x)\n",
+    "\n",
+    "    return svm_predicted"
    ]
   },
   {
@@ -153,23 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "78.16508644729504\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "svm_success = 0.0\n",
-    "for i, val in enumerate(svm_predicted):\n",
-    "    if val == df_test_y[i]:\n",
-    "        svm_success += 1\n",
-    "print(svm_success/len(svm_predicted)*100)"
+    "def get_SVM_error(svm_predicted):\n",
+    "    svm_success = 0.0\n",
+    "    for i, val in enumerate(svm_predicted):\n",
+    "        if val == df_test_y[i]:\n",
+    "            svm_success += 1\n",
+    "            \n",
+    "    return svm_success/len(svm_predicted)*100"
    ]
   },
   {
@@ -177,6 +200,96 @@
    "metadata": {},
    "source": [
     "#### Tabla de resumen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_wavelets = list()\n",
+    "svm_acurracies = list()\n",
+    "\n",
+    "\n",
+    "for wavelet in discrete_wavelets:\n",
+    "    df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
+    "    df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
+    "\n",
+    "    svm_predicted = SVM_classification(df_train_x, df_train_y, df_test_x)\n",
+    "    svm_accuracy = get_SVM_error(svm_predicted)\n",
+    "\n",
+    "    svm_wavelets.append(wavelet)\n",
+    "    svm_acurracies.append(svm_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_experiment = [[svm_wavelets[i][:], accuracy] for i, accuracy in enumerate(svm_acurracies) if accuracy > 83]\n",
+    "svm_experiment = sorted(svm_experiment, key = lambda item: item[1], reverse = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------  -------\n",
+      "db4      83.6168\n",
+      "coif5    83.589\n",
+      "coif8    83.589\n",
+      "coif2    83.575\n",
+      "sym5     83.575\n",
+      "rbio2.2  83.4495\n",
+      "coif7    83.3659\n",
+      "coif6    83.2962\n",
+      "coif3    83.2125\n",
+      "coif4    83.1149\n",
+      "sym9     83.1149\n",
+      "coif10   83.0312\n",
+      "db10     83.0312\n",
+      "-------  -------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' # creating the bar plot\\nplt.bar(svm_experiment.keys(), svm_experiment.values())\\n \\nplt.xlabel(\"Wavelets\")\\nplt.ylabel(\"Accuracies\")\\nplt.title(\"SVM\")\\nplt.show() '"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x500 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure(figsize = (10, 5))\n",
+    " \n",
+    "print(tabulate(svm_experiment))\n",
+    "\"\"\" # creating the bar plot\n",
+    "plt.bar(svm_experiment.keys(), svm_experiment.values())\n",
+    " \n",
+    "plt.xlabel(\"Wavelets\")\n",
+    "plt.ylabel(\"Accuracies\")\n",
+    "plt.title(\"SVM\")\n",
+    "plt.show() \"\"\""
    ]
   },
   {
@@ -188,9 +301,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "knn = KNeighborsClassifier(n_neighbors=24)\n",
     "knn.fit(df_train_x,df_train_y)\n",
@@ -206,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.878973786949246\n"
+      "46.9882877858338\n"
      ]
     }
    ],
@@ -298,9 +428,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3753608538.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def sklearn_k_fold_cross_validation (model, x_train, y_train, k)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def sklearn_k_fold_cross_validation (model, x_train, y_train, k)\n",
     "    scores = cross_val_score(model, x_train, y_, cv = k, scoring = ‘accuracy’)\n",
@@ -311,7 +450,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.2 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -325,11 +464,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b1fc82697690d5394813d7b32ae5c877233d2ec6558daccf0379c2991af558ac"
+    "hash": "67bb906f09da34e2c26e67dc6a9d867a380e7b8dec1e6d3996f99a1aad7ac05e"
    }
   }
  },
