wavelet experiments done in DT and SVM

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -28,7 +28,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "#Librerías de reducción de dimensiones\n",
+    "#Librerías que permitirá reducir dimensiones\n",
     "import pywt\n",
     "import pywt.data\n",
     "\n",
@@ -37,7 +37,7 @@
     "from skimage.transform import resize\n",
     "from skimage.color import rgb2gray\n",
     "\n",
-    "#Librerías para gráficas\n",
+    "#Librerías para generar gráficas\n",
     "import matplotlib.pyplot as plt\n",
     "from tabulate import tabulate\n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "def vectorizar(matrix):\n",
     "  return matrix.flatten()\n",
     "\n",
-    "def proccess_letters(dataset, wavelet):\n",
+    "def proccess_letters(dataset, wavelet, cuts):\n",
     "  \n",
     "  data_X = []\n",
     "  data_Y = []\n",
@@ -109,7 +109,7 @@
     "      letter = letter_features[0]\n",
     "      data_Y.append(letter)\n",
     "\n",
-    "      letter_features = reduce_dimension(letter_features[1:], 2, wavelet)\n",
+    "      letter_features = reduce_dimension(letter_features[1:], cuts, wavelet)\n",
     "      letter_features = vectorizar(letter_features)\n",
     "      data_X.append(letter_features)\n",
     "\n",
@@ -120,17 +120,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Wavelet transform"
+    "#### Wavelet families"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "discrete_wavelets = ['haar', 'bior', 'coif', 'rbio', 'sym', 'db', 'dmey']\n",
-    "discrete_wavelets = [ wavelet for wavelet in pywt.wavelist(kind='discrete')]"
+    "discrete_family_wavelets = ['haar', 'bior', 'coif', 'rbio', 'sym', 'db', 'dmey']\n",
+    "discrete_wavelets = {family:pywt.wavelist(family) for family in discrete_family_wavelets}"
    ]
   },
   {
@@ -156,12 +156,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wavelet experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wavelet_experiment(classification, get_accuracy):\n",
+    "    experiment_wavelets = dict()\n",
+    "\n",
+    "    for family, wavelets in discrete_wavelets.items():\n",
+    "        wavelets_accuracy_list = list()\n",
+    "        \n",
+    "        for wavelet in wavelets:\n",
+    "            df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
+    "            df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
+    "\n",
+    "            prediction = classification(df_train_x, df_train_y, df_test_x)\n",
+    "            accuracy = get_accuracy(prediction)\n",
+    "\n",
+    "            wavelets_accuracy_list.append((wavelet, accuracy))\n",
+    "        \n",
+    "        experiment_wavelets[family] = wavelets_accuracy_list\n",
+    "    \n",
+    "    return experiment_wavelets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Accuracy calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_accuracy(experiment_wavelets):\n",
+    "    max_results = list()\n",
+    "\n",
+    "    for family, result in experiment_wavelets.items():\n",
+    "        max_result = max(result, key = lambda tuple: tuple[1])\n",
+    "        max_results.append(max_result)\n",
+    "\n",
+    "    return max_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### SVM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,92 +267,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_wavelets = list()\n",
-    "svm_acurracies = list()\n",
-    "\n",
-    "\n",
-    "for wavelet in discrete_wavelets:\n",
-    "    df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
-    "    df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
-    "\n",
-    "    svm_predicted = SVM_classification(df_train_x, df_train_y, df_test_x)\n",
-    "    svm_accuracy = get_SVM_error(svm_predicted)\n",
-    "\n",
-    "    svm_wavelets.append(wavelet)\n",
-    "    svm_acurracies.append(svm_accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_experiment = [[svm_wavelets[i][:], accuracy] for i, accuracy in enumerate(svm_acurracies) if accuracy > 83]\n",
-    "svm_experiment = sorted(svm_experiment, key = lambda item: item[1], reverse = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------  -------\n",
-      "db4      83.6168\n",
-      "coif5    83.589\n",
-      "coif8    83.589\n",
-      "coif2    83.575\n",
-      "sym5     83.575\n",
-      "rbio2.2  83.4495\n",
-      "coif7    83.3659\n",
-      "coif6    83.2962\n",
-      "coif3    83.2125\n",
-      "coif4    83.1149\n",
-      "sym9     83.1149\n",
-      "coif10   83.0312\n",
-      "db10     83.0312\n",
-      "-------  -------\n"
+      "('haar', 80.77244841048523)\n",
+      "('bior1.5', 82.40379252649191)\n",
+      "('coif5', 83.58895705521472)\n",
+      "('rbio2.2', 83.4495259341885)\n",
+      "('sym5', 83.5750139431121)\n",
+      "('db4', 83.61684327941997)\n",
+      "('dmey', 81.51143335192414)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "' # creating the bar plot\\nplt.bar(svm_experiment.keys(), svm_experiment.values())\\n \\nplt.xlabel(\"Wavelets\")\\nplt.ylabel(\"Accuracies\")\\nplt.title(\"SVM\")\\nplt.show() '"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x500 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "fig = plt.figure(figsize = (10, 5))\n",
-    " \n",
-    "print(tabulate(svm_experiment))\n",
-    "\"\"\" # creating the bar plot\n",
-    "plt.bar(svm_experiment.keys(), svm_experiment.values())\n",
-    " \n",
-    "plt.xlabel(\"Wavelets\")\n",
-    "plt.ylabel(\"Accuracies\")\n",
-    "plt.title(\"SVM\")\n",
-    "plt.show() \"\"\""
+    "svm_experiment_wavelets = wavelet_experiment(SVM_classification, get_SVM_error)\n",
+    "\n",
+    "svm_experiment_wavelets_max = get_max_accuracy(svm_experiment_wavelets)\n",
+    "\n",
+    "print(\"SVM wavelets experiment:\")\n",
+    "svm_experiment_wavelets_max"
    ]
   },
   {
@@ -371,13 +372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = tree.DecisionTreeClassifier()\n",
-    "dt.fit(df_train_x,df_train_y)\n",
-    "dt_predicted = dt.predict(df_test_x)"
+    "def DT_classification(df_train_x, df_train_y, df_test_x):\n",
+    "    dt = tree.DecisionTreeClassifier()\n",
+    "    dt.fit(df_train_x,df_train_y)\n",
+    "    dt_predicted = dt.predict(df_test_x)\n",
+    "\n",
+    "    return dt_predicted"
    ]
   },
   {
@@ -389,23 +393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46.9882877858338\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dt_success = 0.0\n",
-    "for i, val in enumerate(dt_predicted):\n",
-    "    if val == df_test_y[i]:\n",
-    "        dt_success += 1\n",
-    "print(dt_success/len(dt_predicted)*100)"
+    "def get_DT_error(dt_predicted):\n",
+    "    dt_success = 0.0\n",
+    "    for i, val in enumerate(dt_predicted):\n",
+    "        if val == df_test_y[i]:\n",
+    "            dt_success += 1\n",
+    "    return dt_success/len(dt_predicted)*100"
    ]
   },
   {
@@ -415,6 +412,48 @@
    },
    "source": [
     "#### Tabla de resumen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('haar', 45.133853876185164)\n",
+      "('bior1.3', 51.436140546569995)\n",
+      "('coif5', 50.76687116564417)\n",
+      "('rbio3.7', 53.471834913552705)\n",
+      "('sym11', 52.900167317345236)\n",
+      "('db31', 52.370329057445616)\n",
+      "('dmey', 49.28890128276631)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_experiment_wavelets = wavelet_experiment(DT_classification, get_DT_error)\n",
+    "\n",
+    "dt_experiment_wavelets_max = get_max_accuracy(dt_experiment_wavelets)\n",
+    "\n",
+    "print(\"Decision tree wavelets experiment:\")\n",
+    "dt_experiment_wavelets_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt_experiment_dimension = dimension_experiment(DT_classification, get_DT_error)\n",
+    "\n",
+    "dt_experiment_dimension_max = get_max_accuracy(dt_experiment_dimension)\n",
+    "\n",
+    "print(\"Decision tree wavelets experiment:\")\n",
+    "dt_experiment_dimension_max"
    ]
   },
   {
